--- a/src/Aircraft.API/appsettings.json
+++ b/src/Aircraft.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AircraftDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "key": "afsdkjasjflxswafsdklk434orqiwup3457u-34oewir4irroqwiffv48mfs"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
